<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.bills.BillsActivity">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_custom_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/scroll_bottom_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_medium">

            <!-- Calendar Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="@drawable/bg_calendar_card"
                android:orientation="vertical"
                android:padding="@dimen/spacing_medium">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium">

                    <ImageButton
                        android:id="@+id/btn_prev_month"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_back"
                        android:contentDescription="@string/desc_prev_month"
                        app:tint="@color/text_primary" />

                    <TextView
                        android:id="@+id/tv_month_year"
                        style="@style/CartiHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/placeholder_month_year"
                        android:textSize="@dimen/text_size_header" />

                    <ImageButton
                        android:id="@+id/btn_next_month"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_chevron_right"
                        android:contentDescription="@string/desc_next_month"
                        app:tint="@color/text_primary" />

                </RelativeLayout>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="7"
                    android:useDefaultMargins="true">
                    <TextView style="@style/CalendarDayHeader" android:text="@string/day_sun" />
                    <TextView style="@style/CalendarDayHeader" android:text="@string/day_mon" />
                    <TextView style="@style/CalendarDayHeader" android:text="@string/day_tue" />
                    <TextView style="@style/CalendarDayHeader" android:text="@string/day_wed" />
                    <TextView style="@style/CalendarDayHeader" android:text="@string/day_thu" />
                    <TextView style="@style/CalendarDayHeader" android:text="@string/day_fri" />
                    <TextView style="@style/CalendarDayHeader" android:text="@string/day_sat" />
                </GridLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    tools:itemCount="31"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:spanCount="7" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/due_bills_header"
                style="@style/CartiHeader" />

            <com.google.android.material.card.MaterialCardView
                style="@style/CartiCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:strokeColor="@color/border_subtle"
                app:strokeWidth="@dimen/stroke_width_thin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_bills"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        tools:listitem="@layout/item_bill" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_view_all_bills"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all_bills"
                        android:textColor="@color/carti_primary_green"
                        android:textAllCaps="false"
                        app:icon="@drawable/ic_chevron_right"
                        app:iconGravity="textEnd"
                        app:iconTint="@color/carti_primary_green" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>