<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_white"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <View
        android:layout_width="@dimen/handle_width"
        android:layout_height="@dimen/handle_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/spacing_large"
        android:background="@color/border_subtle" />

    <TextView
        android:id="@+id/tv_dialog_title"
        style="@style/CartiHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_edit_payday" />

    <TextView
        style="@style/CartiSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/desc_edit_payday" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_monthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/label_enable_monthly"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        app:buttonTint="@color/carti_primary_green" />

    <com.google.android.material.card.MaterialCardView
        style="@style/CartiCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium">

        <LinearLayout
            android:id="@+id/layout_paydays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_medium">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_small"
                android:hint="@string/hint_day1"
                style="@style/CartiInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_payday1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_small"
                android:hint="@string/hint_day2"
                style="@style/CartiInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_payday2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/CartiButton.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/btn_save_schedule" />

</LinearLayout>